Fixing contrast issues to have AA contrast level on wcag

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -28,7 +28,7 @@ header .logo-img {
 nav.navigation {
     display: flex;
     justify-content: center;
-    background-color: #00B4D8;
+    background-color: #03045E;
     padding: 10px 0;
 }
 
@@ -137,7 +137,7 @@ main {
     display: inline-block;
     margin-top: 1rem;
     padding: 0.5rem 1rem;
-    background-color: #007BFF;
+    background-color: #0077B6;
     color: #fff;
     text-decoration: none;
     border-radius: 4px;
@@ -149,7 +149,7 @@ main {
 }
 
 .card a.member-website:hover {
-    background-color: #0056b3;
+    background-color: #03045E;
 }
 
 footer {
@@ -195,6 +195,7 @@ footer p {
     }
 
     #view-toggle {
+        display: none;
         flex-direction: column;
     }
 
